--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="stylesheet.css">
+
   <title>Frontend Mentor | Results summary component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,33 +16,36 @@
   </style>
 </head>
 <body>
+  <container class="grid">
+    <section class="left">
+      <h2>Your Result</h2>
+      <div class="score">
+        76 of 100
+      </div>
 
-  Your Result
-  76
-  of 100
-
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
-  Summary
-
-  Reaction
-  80 / 100
-
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+      <h1>Great</h1>
+      <p>You scored higher than 65% of the people who have taken these tests.</p>
+    </section>
+    <section class="right">
+      <h2>Summary</h2>
+      <div class="reaction">
+        <p>Reaction</p>
+        <p>80 / 100</p>
+      </div>
+      <div class="memory">
+        <p>Memory</p>
+        <p>92 / 100</p>
+      </div>
+      <div class="verbal">
+        <p>Verbal</p>
+        <p>61 / 100</p>
+      </div>
+      <div class="visual">
+        <p>Visual</p>
+        <p>72 / 100</p>
+      </div>
+      <a class=" button">Continue</a>
+  </section>
+  </container>
 </body>
 </html>
