--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <container class="grid">
-    <section class="left">
+    <section class="box-1">
       <h2>Your Result</h2>
       <div class="score">
         76 of 100
@@ -26,23 +26,27 @@
       <h1>Great</h1>
       <p>You scored higher than 65% of the people who have taken these tests.</p>
     </section>
-    <section class="right">
+    <section class="box-2">
       <h2>Summary</h2>
       <div class="reaction">
-        <p>Reaction</p>
-        <p>80 / 100</p>
+        <img src="images/icon-reaction.svg" height="18px" width="18px" class="left">
+        <p class="left">Reaction</p>
+        <p class="right">80 / 100</p>
       </div>
       <div class="memory">
-        <p>Memory</p>
-        <p>92 / 100</p>
+        <img src="images/icon-memory.svg" height="18px" width="18px" class="left">
+        <p class="left">Memory</p>
+        <p class="right">92 / 100</p>
       </div>
       <div class="verbal">
-        <p>Verbal</p>
-        <p>61 / 100</p>
+        <img src="images/icon-verbal.svg" height="18px" width="18px" class="left">
+        <p class="left">Verbal</p>
+        <p class="right">61 / 100</p>
       </div>
       <div class="visual">
-        <p>Visual</p>
-        <p>72 / 100</p>
+        <img src="images/icon-visual.svg" height="18px" width="18px" class="left">
+        <p class="left">Visual</p>
+        <p class="right">72 / 100</p>
       </div>
       <a class=" button">Continue</a>
   </section>
