--- a/index.html
+++ b/index.html
@@ -29,24 +29,32 @@
     <section class="box-2">
       <h2>Summary</h2>
       <div class="reaction">
-        <img src="images/icon-reaction.svg" height="18px" width="18px" class="left">
-        <p class="left">Reaction</p>
-        <p class="right">80 / 100</p>
+        <div class="left">
+          <img src="images/icon-reaction.svg" height="18px" width="18px">
+          <p>Reaction</p>
+        </div>
+        <p>80 / 100</p>
       </div>
       <div class="memory">
-        <img src="images/icon-memory.svg" height="18px" width="18px" class="left">
-        <p class="left">Memory</p>
+        <div class="left">
+          <img src="images/icon-memory.svg" height="18px" width="18px">
+          <p>Memory</p>
+        </div>
         <p class="right">92 / 100</p>
       </div>
       <div class="verbal">
-        <img src="images/icon-verbal.svg" height="18px" width="18px" class="left">
-        <p class="left">Verbal</p>
+        <div class="left">
+          <img src="images/icon-verbal.svg" height="18px" width="18px">
+          <p>Verbal</p>
+        </div>
         <p class="right">61 / 100</p>
       </div>
       <div class="visual">
-        <img src="images/icon-visual.svg" height="18px" width="18px" class="left">
-        <p class="left">Visual</p>
-        <p class="right">72 / 100</p>
+        <div class="left">
+          <img src="images/icon-visual.svg" height="18px" width="18px">
+          <p class="left">Visual</p>
+        </div>
+        <p>72 / 100</p>
       </div>
       <a class=" button">Continue</a>
   </section>
