--- a/index.html
+++ b/index.html
@@ -33,28 +33,28 @@
           <img src="images/icon-reaction.svg" height="18px" width="18px">
           <p>Reaction</p>
         </div>
-        <p>80 / 100</p>
+        <p class="right"><bold>80</bold> / 100</p>
       </div>
       <div class="memory">
         <div class="left">
           <img src="images/icon-memory.svg" height="18px" width="18px">
           <p>Memory</p>
         </div>
-        <p class="right">92 / 100</p>
+        <p class="right"><bold>92</bold> / 100</p>
       </div>
       <div class="verbal">
         <div class="left">
           <img src="images/icon-verbal.svg" height="18px" width="18px">
           <p>Verbal</p>
         </div>
-        <p class="right">61 / 100</p>
+        <p class="right"><bold>61</bold> / 100</p>
       </div>
       <div class="visual">
         <div class="left">
           <img src="images/icon-visual.svg" height="18px" width="18px">
           <p class="left">Visual</p>
         </div>
-        <p>72 / 100</p>
+        <p class="right"><bold>72</bold> / 100</p>
       </div>
       <a class=" button">Continue</a>
   </section>
