--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
     <section class="box-1">
       <h2>Your Result</h2>
       <div class="score">
-        76 of 100
+        <bold>76</bold>
+        <p>of 100</p>
       </div>
-
-      <h1>Great</h1>
-      <p>You scored higher than 65% of the people who have taken these tests.</p>
+      <div class="motivation">
+        <h1>Great</h1>
+        <p>You scored higher than 65% of the people who have taken these tests.</p>
+      </div>
     </section>
     <section class="box-2">
       <h2>Summary</h2>
